# StudioCAD

./: .gitmodules  README.md
MathLib/: CMakeLists.txt
MathLib/include/MG1Math/: Mat3.h  Mat4.h  Vect3.h  Vect4.h
MathLib/source/: Mat3.cpp  Mat4.cpp  Vect3.cpp  Vect4.cpp
Project/: CMakeLists.txt  example_scene.json  imgui.ini
Project/src/: main.cpp
Project/src/shaders/: bezier.fs  bezier.vs  bezier_geom.fs  bezier_geom.gs  bezier_line_strip.fs  bspline_geom.gs  bspline_line_strip.vs  first.fs  first.vs  gregory.tcs  gregory.tes  raycasting.vs  raycasting_cpu.fs  raycasting_cpu.vs  spline_algebraic_geom.gs  surface.fs  surface.tcs  surface.vs  surfaceC0.tes  surfaceC2.tes  torus.fs  torus.vs
Project/src/shapes/headers/: VirtualPoints.h  appState.h  applyTransformations.h  axis.h  bakeTransform.h  camera.h  cursor.h  deleteManager.h  enums.h  evaluableSurface.h  gregoryGrid.h  grid.h  guiManager.h  holeManager.h  intersectionSolver.h  matrixesModelViewProjection.h  previewContext.h  previewFunctions.h  quaternion.h  sceneBezier.h  sceneBezierC0.h  sceneBezierC2.h  sceneGregoryPatch.h  sceneIntersectionCurve.h  sceneObject.h  scenePoint.h  scenePolygon.h  sceneSerializer.h  sceneSplineInterpolating.h  sceneSurface.h  sceneTorus.h  screenInteractions.h  selectionManager.h  shader.h  torus.h  torusGrid.h  transformManager.h  transformations.h
Project/src/shapes/source/: applyTransformations.cpp  axis.cpp  cursor.cpp  deleteManager.cpp  gregoryGrid.cpp  grid.cpp  guiManager.cpp  matrixesModelViewProjection.cpp  previewFunctions.cpp  quaternion.cpp  sceneBezier.cpp  sceneBezierC0.cpp  sceneBezierC2.cpp  sceneGregoryPatch.cpp  sceneIntersectionCurve.cpp  scenePoint.cpp  sceneSerializer.cpp  sceneSplineInterpolating.cpp  sceneSurface.cpp  sceneSurfaceC0.cpp  sceneSurfaceC2.cpp  sceneTorus.cpp  screenInteractions.cpp  selectionManager.cpp  torus.cpp  torusGrid.cpp  transformManager.cpp
proj1/: CMakeLists.txt  imgui.ini
proj1/olds/: old_main.txt
proj1/src/: main.cpp  shader.h
proj1/src/shaders/: first.fs  first.vs  raycasting.fs  raycasting.vs  raycasting_cpu.fs  raycasting_cpu.vs
